# RLOO

./: README.md  get_opencodeinstruct_dataset.py  humaneval_samples.jsonl  humaneval_samples.jsonl_results.jsonl  pyproject.toml  qwenTest.py  requirements.txt  rloo_mbpp_humaneval_minimal.ipynb
configs/: default_training.yaml
notebooks/: 01_dataset_preview.ipynb  02_rloo_training.ipynb
scripts/: kaggle_setup.py
smollm2-mbpp-rloo/: README.md
smollm2-mbpp-rloo/checkpoint-50/: README.md  rng_state.pth  scheduler.pt  trainer_state.json
smollm2-mbpp-rloo/checkpoint-60/: adapter_config.json  rng_state.pth  scheduler.pt  tokenizer.json  trainer_state.json
smollm2-mbpp-rloo/runs/Nov07_13-43-17_MikiLaptop/: events.out.tfevents.1762519427.MikiLaptop.22128.0
smollm2-mbpp-rloo/runs/Oct17_14-56-40_MikiLaptop/: events.out.tfevents.1760705894.MikiLaptop.3180.0
src/rloo_project/: __init__.py  config.py  data.py  modeling.py  prompts.py  train_rloo.py
